# 42

./: CMakeLists.txt
c00/: ex00.c  ex01.c  ex02.c  ex03.c  ex04.c  ex05.c  ex06.c
c10/: ex07.c
