cmake_minimum_required(VERSION 3.29)
project(42 C)

set(CMAKE_C_STANDARD 11)

add_executable(42
    c00/ex00.c
    c00/ex01.c
    c00/ex02.c
    c00/ex03.c
    c00/ex04.c
    c00/ex05.c
    c00/ex06.c
    c00/ex07.c
    c00/ex08.c
    c01/ex00.c
    c01/ex01.c
    c01/ex02.c
    c01/ex03.c
    c01/ex04.c
    c01/ex05.c
    c01/ex06.c
    c01/ex07.c
    c01/ex08.c
    c02/ex00.c
    c02/ex01.c
    c02/ex02.c
    c02/ex03.c
    c02/ex04.c
    c02/ex05.c
    c02/ex06.c
    c02/ex07.c
    c02/ex08.c
    c03/ex00.c
    c03/ex01.c
    c03/ex02.c
    c03/ex03.c
    c03/ex04.c
    c03/ex05.c
    c03/ex06.c
    c03/ex07.c
    c03/ex08.c
    c04/ex00.c
    c04/ex01.c
    c04/ex02.c
    c04/ex03.c
    c04/ex04.c
    c04/ex05.c
    c04/ex06.c
    c04/ex07.c
    c04/ex08.c
    c05/ex00.c
    c05/ex01.c
    c05/ex02.c
    c05/ex03.c
    c05/ex04.c
    c05/ex05.c
    c05/ex06.c
    c05/ex07.c
    c05/ex08.c
    c06/ex00.c
    c06/ex01.c
    c06/ex02.c
    c06/ex03.c
    c06/ex04.c
    c06/ex05.c
    c06/ex06.c
    c06/ex07.c
    c06/ex08.c
    c07/ex00.c
    c07/ex01.c
    c07/ex02.c
    c07/ex03.c
    c07/ex04.c
    c07/ex05.c
    c07/ex06.c
    c07/ex07.c
    c07/ex08.c
    c08/ex00.c
    c08/ex01.c
    c08/ex02.c
    c08/ex03.c
    c08/ex04.c
    c08/ex05.c
    c08/ex06.c
    c08/ex07.c
    c08/ex08.c
    c09/ex00.c
    c09/ex01.c
    c09/ex02.c
    c09/ex03.c
    c09/ex04.c
    c09/ex05.c
    c09/ex06.c
    c09/ex07.c
    c09/ex08.c
    c10/ex00.c
    c10/ex01.c
    c10/ex02.c
    c10/ex03.c
    c10/ex04.c
    c10/ex05.c
    c10/ex06.c
    c10/ex07.c
    c10/ex08.c
    c11/ex00.c
    c11/ex01.c
    c11/ex02.c
    c11/ex03.c
    c11/ex04.c
    c11/ex05.c
    c11/ex06.c
    c11/ex07.c
    c11/ex08.c
    c12/ex00.c
    c12/ex01.c
    c12/ex02.c
    c12/ex03.c
    c12/ex04.c
    c12/ex05.c
    c12/ex06.c
    c12/ex07.c
    c12/ex08.c
    c13/ex00.c
    c13/ex01.c
    c13/ex02.c
    c13/ex03.c
    c13/ex04.c
    c13/ex05.c
    c13/ex06.c
    c13/ex07.c
    c13/ex08.c)
